--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "noora-website",
+  "name": "noora",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -14,7 +14,14 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "18.0.4",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2"
+    "eslint-config-next": "12.2.2",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6",
+    "typescript": "4.7.4"
   }
 }
