--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@headlessui/react": "^1.6.6",
     "clsx": "^1.2.1",
     "next": "12.2.2",
+    "openai": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
