--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^1.2.1",
     "next": "12.2.2",
     "openai": "^3.0.0",
+    "openai-api": "^1.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
