--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.6.6",
     "clsx": "^1.2.1",
+    "fs": "^0.0.1-security",
     "next": "12.2.2",
     "openai": "^3.0.0",
     "openai-api": "^1.3.1",
