--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.6.6",
+    "@types/uuid": "^8.3.4",
     "clsx": "^1.2.1",
     "fs": "^0.0.1-security",
     "next": "12.2.2",
     "openai": "^3.0.0",
     "openai-api": "^1.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "18.0.4",
