--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "openai-api": "^1.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-spinners": "^0.13.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
