--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "@types/uuid": "^8.3.4",
     "clsx": "^1.2.1",
     "fs": "^0.0.1-security",
+    "microsoft-cognitiveservices-speech-sdk": "^1.22.0",
     "next": "12.2.2",
     "openai": "^3.0.0",
     "openai-api": "^1.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.3",
+    "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
