--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "openai": "^3.0.0",
     "openai-api": "^1.3.1",
     "react": "18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "18.2.0",
     "react-spinners": "^0.13.3",
     "universal-cookie": "^4.0.4",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/node": "18.0.4",
     "@types/react": "18.0.15",
+    "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
