--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/uuid": "^8.3.4",
     "clsx": "^1.2.1",
     "fs": "^0.0.1-security",
+    "lru-cache": "^7.13.1",
     "microsoft-cognitiveservices-speech-sdk": "^1.22.0",
     "next": "12.2.2",
     "openai": "^3.0.0",
