--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "18.2.0",
+    "react-joyride": "^2.5.0",
     "react-spinners": "^0.13.3",
     "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2"
