--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "next": "12.2.2",
     "openai": "^3.0.0",
     "openai-api": "^1.3.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-circular-progressbar": "^2.1.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-joyride": "^2.5.0",
+    "react-mic": "^12.4.6",
     "react-spinners": "^0.13.3",
     "reactjs-percentage-circle": "^1.0.0",
     "swr": "^1.3.0",
@@ -43,6 +44,7 @@
     "@types/react": "18.0.15",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-dom": "18.0.6",
+    "@types/react-mic": "^12.4.3",
     "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
