--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "next": "12.2.2",
     "openai": "^3.0.0",
     "openai-api": "^1.3.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "18.2.0",
     "react-joyride": "^2.5.0",
+    "react-mic": "^12.4.6",
     "react-spinners": "^0.13.3",
     "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2"
@@ -37,6 +38,7 @@
     "@types/react": "18.0.15",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-dom": "18.0.6",
+    "@types/react-mic": "^12.4.3",
     "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
