--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "@tailwindcss/forms": "^0.5.2",
+    "@types/dateformat": "^5.0.0",
     "@types/uuid": "^8.3.4",
     "clsx": "^1.2.1",
+    "dateformat": "^5.0.3",
     "fs": "^0.0.1-security",
     "lru-cache": "^7.13.1",
     "microsoft-cognitiveservices-speech-sdk": "^1.22.0",
@@ -26,9 +28,12 @@
     "openai-api": "^1.3.1",
     "react": "18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "18.2.0",
     "react-joyride": "^2.5.0",
     "react-spinners": "^0.13.3",
+    "reactjs-percentage-circle": "^1.0.0",
+    "swr": "^1.3.0",
     "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2"
   },
