--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-circular-progressbar": "^2.1.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-joyride": "^2.5.0",
     "react-spinners": "^0.13.3",
