--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^1.2.1",
     "dateformat": "^5.0.3",
     "fs": "^0.0.1-security",
+    "heroicons": "^2.0.10",
     "lru-cache": "^7.13.1",
     "microsoft-cognitiveservices-speech-sdk": "^1.22.0",
     "next": "12.2.2",
