--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@tailwindcss/forms": "^0.5.2",
     "@types/dateformat": "^5.0.0",
     "@types/uuid": "^8.3.4",
+    "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
     "dateformat": "^5.0.3",
     "fs": "^0.0.1-security",
     "heroicons": "^2.0.10",
+    "js-confetti": "^0.11.0",
     "lru-cache": "^7.13.1",
     "microsoft-cognitiveservices-speech-sdk": "^1.22.0",
     "next": "12.2.2",
@@ -32,12 +34,14 @@
     "react-circular-progressbar": "^2.1.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
+    "react-dom-confetti": "^0.2.0",
     "react-joyride": "^2.5.0",
     "react-spinners": "^0.13.3",
     "reactjs-percentage-circle": "^1.0.0",
     "swr": "^1.3.0",
     "type-check": "^0.4.0",
     "universal-cookie": "^4.0.4",
+    "use-sound": "^4.0.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -48,7 +52,9 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
+    "file-loader": "^6.2.0",
     "postcss": "^8.4.14",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.1.6",
     "typescript": "4.7.4"
   }
