--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "canvas-confetti": "^1.6.0",
     "clsx": "^1.2.1",
     "dateformat": "^5.0.3",
+    "firebase": "^10.1.0",
     "fs": "^0.0.1-security",
     "heroicons": "^2.0.10",
     "js-confetti": "^0.11.0",
     "lru-cache": "^7.13.1",
     "microsoft-cognitiveservices-speech-sdk": "^1.22.0",
+    "mongodb": "^5.7.0",
     "next": "12.2.2",
     "openai": "^3.2.1",
     "openai-api": "^1.3.1",
@@ -51,7 +53,7 @@
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.7",
-    "eslint": "8.19.0",
+    "eslint": "^8.19.0",
     "eslint-config-next": "12.2.2",
     "file-loader": "^6.2.0",
     "postcss": "^8.4.14",
