--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^1.2.1",
     "dateformat": "^5.0.3",
     "firebase": "^10.1.0",
+    "firebase-admin": "^13.0.1",
     "fs": "^0.0.1-security",
     "heroicons": "^2.0.10",
     "js-confetti": "^0.11.0",
